<resources>
    <string name="app_name">Candy</string>

    <string name="bottom_nav_item_name_1">홈</string>
    <string name="bottom_nav_item_name_2">챌린지</string>
    <string name="bottom_nav_item_name_3">캔디 관리</string>
    <string name="bottom_nav_item_name_4">마이페이지</string>

    <string name="myCandy">나의 캔디 : %s개</string>
    <string name="category">카테고리</string>
    <string name="myChallenge">진행 중인 챌린지</string>

    <string name="userInfoChange">정보 변경</string>

    <!--  버튼  -->
    <string name="ok">확인</string>

    <!--    마이페이지-->
    <string name="numberOfStudentCandy">보유 중인 캔디 : %s개</string>
    <string name="numberOfParentCandy">충전된 캔디 : %s개</string>
    <string name="candyHistory">캔디내역</string>
    <string name="chargeCandy">캔디 충전</string>
    <string name="withDrawCandy">캔디 인출</string>
    <string name="name">이름</string>
    <string name="phone">핸드폰 번호</string>
    <string name="birth">생년월일</string>
    <string name="verifyPassword">개인정보 변경을 위해 비밀번호를 입력해 주세요.</string>
    <string name="id">아이디</string>
    <string name="email">이메일</string>
    <string name="pw">비밀번호</string>
    <string name="checkPw">비밀번호 확인</string>
    <string name="parentPw">2차 비밀번호</string>
    <string name="checkParentPw">2차 비밀번호 확인</string>
    <string name="emailAuth">인증코드</string>
    <string name="change">변경하기</string>
    <string name="currentPw">현재 비밀번호</string>
    <string name="newPw">새 비밀번호</string>
    <string name="verifyNewPw">새 비밀번호 확인</string>
    <string name="changePw">비밀번호 변경</string>
    <string name="_2">현재 2차 비밀번호</string>
    <string name="_new2">새 2차 비밀번호</string>
    <string name="_verifyNew2">새 2차 비밀번호 확인</string>
    <string name="_change2">2차 비밀번호 변경</string>

    <!-- challenge -->
    <string name="text1">챌린지에 배정할 캔디 개수를 입력하세요</string>
    <string name="recent20History">최근 20개의 내역만 조회 가능합니다.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  캔디 획득  -->
    <string name="candy_attain">캔디 획득</string>
    <string name="verify_password">캔디 배정 취소를 위해 2차 비밀번호를 입력해 주세요</string>

    <!--    문제 풀이-->
    <string name="challengeScore">%d점</string>
    <string name="problemNumber">%d번</string>

</resources>