<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/dialog_layout"
    android:layout_width="350dp"
    android:layout_height="400dp"
    android:background="@drawable/dialog_rounded">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/candy_attain"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal_30"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_password"

        app:layout_constraintTop_toTopOf="@id/guideline_horizontal_30"
        app:layout_constraintBottom_toTopOf="@+id/pwLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pwLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/parentPw"
        app:boxBackgroundColor="@color/editbox"
        app:errorEnabled="true"

        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal_70"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pwEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanum_square_round_bold"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/ok_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        style="@style/tv_challenge_detail_candy_assgin"
        android:paddingVertical="10dp"
        android:background="@drawable/candy_assign_btnlayout_background"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_18"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_82"
        app:layout_constraintTop_toTopOf="@id/guideline_horizontal_70"
        app:layout_constraintBottom_toBottomOf="parent"
        />


    <!--guideline start-->
    <!--  horizontal  -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_30"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_70"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7"/>

    <!--  vertical  -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_18"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.18"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_82"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.82"/>
    <!--guideline end-->

</androidx.constraintlayout.widget.ConstraintLayout>
