<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="user"
            type="com.example.candy.model.data.UserInfo" />

        <variable
            name="viewModel"
            type="com.example.candy.myPage.MyPageViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true">

        <include
            android:id="@+id/title_bar"
            layout="@layout/view_titlebar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView

            android:id="@+id/tv_user_email"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:fontFamily="@font/nanum_square_round_bold"
            android:gravity="center"
            android:text="@{user.email}"
            app:layout_constraintBottom_toTopOf="@id/textField1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_bar" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField1"
            app:boxBackgroundColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:paddingHorizontal="15dp"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/labelEditName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanum_square_round_bold"
                android:text="@{user.name}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldPhone"
            app:boxBackgroundColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:paddingHorizontal="15dp"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/textField1"
            app:layout_constraintStart_toStartOf="@id/textField1"
            app:layout_constraintTop_toBottomOf="@id/textField1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/labelEditPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanum_square_round_bold"
                android:inputType="phone"
                android:text="@{user.phone}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldBirth"
            app:boxBackgroundColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/birth"
            android:paddingHorizontal="15dp"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/textFieldPhone"
            app:layout_constraintStart_toStartOf="@id/textFieldPhone"
            app:layout_constraintTop_toBottomOf="@id/textFieldPhone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/labelEditBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanum_square_round_bold"
                android:inputType="number"
                android:text="@{user.birth}" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_notice"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:fontFamily="@font/nanum_square_round_bold"
            android:gravity="center"
            android:text="@string/verifyPassword"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/textFieldBirth"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="@id/textFieldBirth"
            app:layout_constraintTop_toBottomOf="@id/textFieldBirth" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField4"
            app:boxBackgroundColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/pw"
            android:paddingHorizontal="15dp"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_notice">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/labelEditPw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanum_square_round_bold"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/change_user_info_btn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/nanum_square_round_bold"
            android:paddingVertical="10dp"
            android:text="@string/change"
            android:textColor="#F874AB"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textField4"
            app:layout_constraintWidth_percent="0.8"
            app:strokeColor="#FDB1D8" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>