<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activity.SignUpActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/view_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:id="@+id/signupContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="40dp"
            android:weightSum="100">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/idLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/id"
                    app:boxBackgroundColor="@color/editbox"
                    app:errorEnabled="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.65">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/idEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nanum_square_round_bold" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/verifyEmailButton"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:background="@drawable/rect_stroke_pink"
                    android:gravity="center"
                    android:text="중복 확인"
                    android:textColor="@color/text_pink"
                    android:textStyle="bold"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.3" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone">

                <EditText
                    android:id="@+id/emailAuthEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FDB1D8"
                    android:drawableStart="@drawable/ic_baseline_smartphone_24"
                    android:drawablePadding="10dp"
                    android:hint="인증번호"
                    android:textColor="@color/black"
                    android:textColorHint="#999999"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.45" />

                <TextView
                    android:id="@+id/sendEmailAuthBtn"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/rect_stroke_pink"
                    android:gravity="center"
                    android:text="인증메일 전송"
                    android:textColor="@color/text_pink"
                    android:textStyle="bold"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/checkEmailAuthBtn"
                    app:layout_constraintStart_toEndOf="@+id/emailAuthET"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.3" />

                <TextView
                    android:id="@+id/checkEmailAuthBtn"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/rect_stroke_pink"
                    android:gravity="center"
                    android:text="확인"
                    android:textColor="@color/text_pink"
                    android:textStyle="bold"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.2" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pwLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pw"
                app:boxBackgroundColor="@color/editbox"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pwEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nanum_square_round_bold"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pwCheckLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/checkPw"
                app:boxBackgroundColor="@color/editbox"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pwCheckEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nanum_square_round_bold"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/parentPwLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/parentPw"
                app:boxBackgroundColor="@color/editbox"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/parentPwEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nanum_square_round_bold"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/parentPwCheckLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/checkParentPw"
                app:boxBackgroundColor="@color/editbox"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/parentPwCheckEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nanum_square_round_bold"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:boxBackgroundColor="@color/editbox"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nanum_square_round_bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                app:boxBackgroundColor="@color/editbox"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nanum_square_round_bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/birthLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birth"
                app:boxBackgroundColor="@color/editbox"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/birthEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nanum_square_round_bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:id="@+id/signupBtn"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="7"
                    android:background="@drawable/rect_gradient"
                    android:gravity="center"
                    android:text="회원가입"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>