<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="candy"
            type="com.example.candy.model.data.Candy" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true">

        <include
            android:id="@+id/title_bar"
            layout="@layout/view_titlebar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/my_candy"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_bar">

            <TextView
                android:id="@+id/studentCandy"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center|start"
                android:text="@{candy.candy}"
                android:textStyle="bold" />

            <Button
                android:id="@+id/withdrawCandy"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:paddingVertical="10dp"
                android:text="@string/withDrawCandy"
                android:textColor="#F874AB"
                app:strokeColor="#FDB1D8" />
        </LinearLayout>

        <TextView
            android:id="@+id/candy_list"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:text="@string/candyHistory"
            android:textStyle="bold"
            app:layout_constraintHeight_percent="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_candy" />

        <TextView
            android:id="@+id/info_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/candy_list"
            app:layout_constraintTop_toBottomOf="@id/candy_list"
            app:layout_constraintBottom_toTopOf="@id/view"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="start|center_vertical"
            android:text="@string/recent20History"/>

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#EBEBEB"
            android:layout_marginVertical="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_tv"
            app:layout_constraintBottom_toTopOf="@id/recyclerview"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>